--- a/hci-project/package.json
+++ b/hci-project/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.10.0",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.1",
     "rc-virtual-list": "^3.11.2",
     "react": "^18.2.0",
