--- a/hci-project/package.json
+++ b/hci-project/package.json
@@ -1,56 +1,73 @@
 {
-  "name": "hci-project",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@ant-design/compatible": "^5.1.2",
-    "@ant-design/icons": "^5.2.6",
-    "@popperjs/core": "^2.11.8",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.10.0",
-    "axios": "^1.6.2",
-    "bootstrap": "^5.3.1",
-    "rc-virtual-list": "^3.11.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.1.2",
-    "react-router-dom": "^6.17.0",
-    "react-scripts": "^5.0.1",
-    "redux": "^4.2.1",
-    "sass-loader": "^7.3.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@ant-design/pro-components": "^2.6.28",
-    "@faker-js/faker": "^8.1.0",
-    "@types/react-infinite-scroll-component": "^5.0.0",
-    "scss": "^0.2.4"
-  }
+	"name": "hci-project",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@ant-design/compatible": "^5.1.2",
+		"@ant-design/icons": "^5.2.6",
+		"@popperjs/core": "^2.11.8",
+		"@reduxjs/toolkit": "^1.9.5",
+		"@testing-library/jest-dom": "^5.17.0",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^13.5.0",
+		"@vitejs/plugin-react-swc": "^3.5.0",
+		"antd": "^5.10.0",
+		"axios": "^1.6.2",
+		"bootstrap": "^5.3.1",
+		"rc-virtual-list": "^3.11.2",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-redux": "^8.1.2",
+		"react-router-dom": "^6.17.0",
+		"react-scripts": "^5.0.1",
+		"redux": "^4.2.1",
+		"sass-loader": "^7.3.1",
+		"web-vitals": "^2.1.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"dev": "vite",
+		"vite-start": "vite",
+		"preview": "vite preview",
+		"vite-build": "vite build",
+		"vite-dev": "vite",
+		"vite-preview": "vite preview"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@ant-design/pro-components": "^2.6.28",
+		"@faker-js/faker": "^8.1.0",
+		"@types/react-infinite-scroll-component": "^5.0.0",
+		"@vitejs/plugin-legacy": "^1.4.4",
+		"@vitejs/plugin-react-refresh": "^1.3.5",
+		"scss": "^0.2.4",
+		"vite": "2",
+		"vite-plugin-react-js-support": "latest",
+		"@types/react": "^18.2.37",
+		"@types/react-dom": "^18.2.15",
+		"eslint": "^8.53.0",
+		"eslint-plugin-react": "^7.33.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.4"
+	}
 }
