--- a/hci-project/.eslintrc.json
+++ b/hci-project/.eslintrc.json
@@ -16,6 +16,9 @@
     "react"
   ],
   "rules": {
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "warn",
+    "react/prop-types": "off",
+    "no-unused-vars": "warn",
+    "prettier/prettier": "warn"
   }
 }
