--- a/hci-project/package.json
+++ b/hci-project/package.json
@@ -64,6 +64,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.5",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.1.0",
     "scss": "^0.2.4",
