--- a/hci-project/package.json
+++ b/hci-project/package.json
@@ -26,16 +26,15 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "dev": "vite",
     "vite-start": "vite",
     "preview": "vite preview",
     "vite-build": "vite build",
     "vite-dev": "vite",
-    "vite-preview": "vite preview"
+    "vite-preview": "vite preview",
+    "lint": "eslint src/**/*.{js,jsx}",
+    "lint:fix": "eslint --fix src/**/*.{js,jsx,}",
+    "format": "prettier --write src/**/*.{js,jsx,} --config .prettierrc.json"
   },
   "eslintConfig": {
     "extends": [
@@ -63,6 +62,11 @@
     "@types/react-infinite-scroll-component": "^5.0.0",
     "@vitejs/plugin-legacy": "^1.4.4",
     "@vitejs/plugin-react-refresh": "^1.3.5",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
+    "prettier": "^3.1.0",
     "scss": "^0.2.4",
     "vite": "2",
     "vite-plugin-react-js-support": "latest"
