--- a/hci-project/package.json
+++ b/hci-project/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.1",
     "markdown-it": "^13.0.2",
+    "marked": "^11.0.0",
     "rc-virtual-list": "^3.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
