--- a/hci-project/.eslintrc.json
+++ b/hci-project/.eslintrc.json
@@ -1,39 +1,11 @@
 {
-<<<<<<< HEAD
-<<<<<<< HEAD
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": ["eslint:recommended", "plugin:react/jsx-runtime", "plugin:prettier/recommended"],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": ["react", "unused-imports"],
-    "rules": {
-        "no-unused-vars": "off", // or "@typescript-eslint/no-unused-vars": "off",
-        "unused-imports/no-unused-imports": "warn",
-        "unused-imports/no-unused-vars": [
-            "warn",
-            {
-                "vars": "all",
-                "varsIgnorePattern": "^_",
-                "args": "after-used",
-                "argsIgnorePattern": "^_"
-            }
-        ]
-    }
-=======
-=======
->>>>>>> origin/dev
   "env": {
     "browser": true,
     "es2021": true
   },
   "extends": [
     "eslint:recommended",
-    "plugin:react/recommended",
+    "plugin:react/jsx-runtime",
     "plugin:prettier/recommended"
   ],
   "parserOptions": {
@@ -41,16 +13,21 @@
     "sourceType": "module"
   },
   "plugins": [
-    "react"
+    "react",
+    "unused-imports"
   ],
   "rules": {
-    "react/react-in-jsx-scope": "warn",
-    "react/prop-types": "off",
-    "no-unused-vars": "warn",
-    "prettier/prettier": "warn"
+    "no-unused-vars": "off",
+    // or "@typescript-eslint/no-unused-vars": "off",
+    "unused-imports/no-unused-imports": "warn",
+    "unused-imports/no-unused-vars": [
+      "warn",
+      {
+        "vars": "all",
+        "varsIgnorePattern": "^_",
+        "args": "after-used",
+        "argsIgnorePattern": "^_"
+      }
+    ]
   }
-<<<<<<< HEAD
->>>>>>> dev
-=======
->>>>>>> origin/dev
 }
