--- a/hci-project/package.json
+++ b/hci-project/package.json
@@ -16,14 +16,17 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.1",
     "markdown-it": "^13.0.2",
-    "marked": "^11.0.0",
     "rc-virtual-list": "^3.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
+    "remark-frontmatter": "^5.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "sass-loader": "^7.3.1",
     "web-vitals": "^2.1.4"
   },
