--- a/hci-project/package.json
+++ b/hci-project/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/react-md-editor": "^4.0.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "antd": "^5.10.0",
     "axios": "^1.6.2",
