--- a/hci-project/package.json
+++ b/hci-project/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@ant-design/compatible": "^5.1.2",
     "@ant-design/icons": "^5.2.6",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@mdxeditor/editor": "^1.11.3",
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^1.9.7",
@@ -18,6 +21,8 @@
     "bootstrap": "^5.3.1",
     "markdown-it": "^13.0.2",
     "marked": "^11.0.0",
+    "moment": "^2.29.4",
+    "rc-tween-one": "^3.0.6",
     "rc-virtual-list": "^3.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
