--- a/hci-project/package.json
+++ b/hci-project/package.json
@@ -22,9 +22,11 @@
     "markdown-it": "^13.0.2",
     "marked": "^11.0.0",
     "moment": "^2.29.4",
+    "papaparse": "^5.4.1",
     "rc-tween-one": "^3.0.6",
     "rc-virtual-list": "^3.11.2",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
