newsContentMD: add Card

--- a/hci-project/package.json
+++ b/hci-project/package.json
@@ -17,12 +17,14 @@
     "@uiw/react-md-editor": "^4.0.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "antd": "^5.10.0",
+    "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.1",
     "markdown-it": "^13.0.2",
     "marked": "^11.0.0",
     "moment": "^2.29.4",
     "papaparse": "^5.4.1",
+    "postcss": "^8.4.32",
     "rc-tween-one": "^3.0.6",
     "rc-virtual-list": "^3.11.2",
     "react": "^18.2.0",
