--- a/hci-project/package.json
+++ b/hci-project/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^6.17.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "sass-loader": "^7.3.1",
     "web-vitals": "^2.1.4"
   },
